--- a/station1/s1rates.properties
+++ b/station1/s1rates.properties
@@ -1,5 +1,1 @@
-
-spring.application.name=s1rates
-spring.profiles.active=default
-spring.cloud.config.label=main
-spring.config.import=optional:configserver:localhost:8888
+greeting:hello
