--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 
-spring.application.name=s1rates
+spring.application.name=configserver-git
 spring.profiles.active=default
 spring.cloud.config.label=main
 spring.config.import=optional:configserver:localhost:8888
